# Ashkorix

./: .gitignore
Data/: README.md  config.toml.example
ashkorix/: .gitignore  Cargo.toml  README.md
ashkorix/.cargo/: config.toml
ashkorix/.github/workflows/: ci.yml
ashkorix/crates/ashkorix-app/: dev.bat  index.html  package-lock.json  package.json
ashkorix/crates/ashkorix-app/src/: App.css  App.tsx  api.ts  index.css  routes.tsx  types.ts
ashkorix/crates/ashkorix-app/src-tauri/: Cargo.toml  tauri.conf.json
ashkorix/crates/ashkorix-app/src-tauri/capabilities/: default.json
ashkorix/crates/ashkorix-app/src-tauri/icons/: icon.icns
ashkorix/crates/ashkorix-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
ashkorix/crates/ashkorix-app/src/components/: ContextSidebar.tsx  KeepAlivePages.tsx  Layout.tsx  WindowChrome.tsx
ashkorix/crates/ashkorix-app/src/context/: ChatSessionContext.tsx
ashkorix/crates/ashkorix-app/src/hooks/: useTauriEvent.ts
ashkorix/crates/ashkorix-app/src/pages/: ChatPage.tsx  DocumentsPage.tsx  MemoryPage.tsx  ModelsPage.tsx  SearchPage.tsx  SettingsPage.tsx
ashkorix/crates/ashkorix-cli/: Cargo.toml
ashkorix/crates/ashkorix-cli/src/: main.rs
ashkorix/crates/ashkorix-core/: Cargo.toml
ashkorix/crates/ashkorix-core/src/: app.rs  error.rs  lib.rs  pool.rs  types.rs
ashkorix/crates/ashkorix-core/src/chunking/: hierarchy.rs  mod.rs  recursive.rs  types.rs  util.rs
ashkorix/crates/ashkorix-core/src/cite/: mod.rs  service.rs  types.rs
ashkorix/crates/ashkorix-core/src/config/: mod.rs  model_paths.rs  paths.rs  settings.rs
ashkorix/crates/ashkorix-core/src/documents/: entities.rs  graph_types.rs  importers.rs  mod.rs  registry.rs  storage.rs  structure.rs  types.rs
ashkorix/crates/ashkorix-core/src/embeddings/: mod.rs  service.rs
ashkorix/crates/ashkorix-core/src/extensions/: manifest.rs  mod.rs  registry.rs  types.rs
ashkorix/crates/ashkorix-core/src/llm/: backend.rs  chat_template.rs  gpu.rs  mod.rs  service.rs
ashkorix/crates/ashkorix-core/src/memory/: direct.rs  extract.rs  format.rs  mod.rs  retrieve.rs  store.rs  types.rs
ashkorix/crates/ashkorix-core/src/rag/: agent.rs  answer.rs  context.rs  mod.rs  prompt.rs  retrieve.rs  types.rs  verify.rs
ashkorix/crates/ashkorix-core/src/rerank/: mod.rs  service.rs
ashkorix/crates/ashkorix-core/src/search/: fusion.rs  indexer.rs  lexical.rs  mod.rs  query_plan.rs
ashkorix/crates/ashkorix-core/src/traits/: chunker.rs  citation.rs  document_importer.rs  embedding.rs  extension_host.rs  lexical_index.rs  mod.rs  model.rs  prompt_builder.rs  reranker.rs  retrieval.rs  vector_index.rs
ashkorix/crates/ashkorix-core/src/vectorstore/: mod.rs  usearch_index.rs
ashkorix/crates/ashkorix-core/tests/: pipeline_integration.rs  retrieval_eval.rs
ashkorix/fixtures/: sample_manual.md
ashkorix/scripts/: _cuda-env.ps1  build-cuda.ps1  build.ps1  dev-cuda.ps1  run-cli.ps1  start.bat  trace_chunks.py  trace_retrieval.py
