[workspace]
resolver = "2"
members = [
    "crates/ashkorix-core",
    "crates/ashkorix-cli",
    "crates/ashkorix-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ashkorix"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7" }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1"
walkdir = "2"
