[package]
name = "ashkorix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ashkorix headless CLI"

[[bin]]
name = "ashkorix"
path = "src/main.rs"

[dependencies]
ashkorix-core = { path = "../ashkorix-core" }
tokio.workspace = true
clap.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
