[package]
name = "ashkorix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ashkorix local RAG engine core"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-util.workspace = true
blake3.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true
regex.workspace = true
anyhow.workspace = true
walkdir.workspace = true
llama-cpp-2 = { version = "0.1.149", features = ["openmp"] }
tantivy = "0.22"
scraper = "0.21"
calamine = "0.26"
docx-rs = "0.4"
pdf-extract = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1"
parking_lot = "0.12"
usearch = "2.15"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
