[package]
name = "ashkorix-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ashkorix desktop application"

[lib]
name = "ashkorix_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ashkorix-core = { path = "../../ashkorix-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
